--- a/src/MiNET/packages/repositories.config
+++ b/src/MiNET/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="../MiNET.Service/packages.config" />
   <repository path="..\MiNET.Service\packages.config" />
+  <repository path="..\MiNET.ServiceKiller\packages.config" />
   <repository path="..\MiNET.Test\packages.config" />
   <repository path="..\MiNET\packages.config" />
   <repository path="..\TestPlugin\packages.config" />
