Full Mob AI implementation.
Also removed herobrine while at it...

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -70,10 +70,14 @@
     <Compile Include="Blocks\BookShelf.cs" />
     <Compile Include="Blocks\BrickStairs.cs" />
     <Compile Include="Blocks\CoalBlock.cs" />
+    <Compile Include="Blocks\CoalOre.cs" />
     <Compile Include="Blocks\Cobblestone.cs" />
     <Compile Include="Blocks\CobbleStoneStairs.cs" />
     <Compile Include="Blocks\CraftingTable.cs" />
     <Compile Include="Blocks\DarkOakWoodStairs.cs" />
+    <Compile Include="Blocks\Dirt.cs" />
+    <Compile Include="Blocks\DoubleStoneSlab.cs" />
+    <Compile Include="Blocks\DoubleWoodSlab.cs" />
     <Compile Include="Blocks\Fence.cs" />
     <Compile Include="Blocks\Fencegate.cs" />
     <Compile Include="Blocks\Fire.cs" />
@@ -82,10 +86,18 @@
     <Compile Include="Blocks\FlowingWater.cs" />
     <Compile Include="Blocks\Furnace.cs" />
     <Compile Include="Blocks\Glass.cs" />
+    <Compile Include="Blocks\GoldBlock.cs" />
     <Compile Include="Blocks\GoldOre.cs" />
+    <Compile Include="Blocks\Grass.cs" />
+    <Compile Include="Blocks\Gravel.cs" />
+    <Compile Include="Blocks\Ice.cs" />
     <Compile Include="Blocks\IronOre.cs" />
     <Compile Include="Blocks\JungleWoodStairs.cs" />
+    <Compile Include="Blocks\LapsisBlock.cs" />
+    <Compile Include="Blocks\LapsisOre.cs" />
     <Compile Include="Blocks\Obsidian.cs" />
+    <Compile Include="Blocks\Sandstone.cs" />
+    <Compile Include="Blocks\Snow.cs" />
     <Compile Include="Blocks\Stationary.cs" />
     <Compile Include="Blocks\StationaryLava.cs" />
     <Compile Include="Blocks\NetherBrickStairs.cs" />
@@ -99,10 +111,12 @@
     <Compile Include="Blocks\Stone.cs" />
     <Compile Include="Blocks\StoneBrick.cs" />
     <Compile Include="Blocks\StoneBrickStairs.cs" />
+    <Compile Include="Blocks\StoneSlab.cs" />
     <Compile Include="Blocks\WallSign.cs" />
     <Compile Include="Blocks\StationaryWater.cs" />
     <Compile Include="Blocks\Wood.cs" />
     <Compile Include="Blocks\WoodenPlanks.cs" />
+    <Compile Include="Blocks\WoodSlab.cs" />
     <Compile Include="CommandHandler\GiveCommand.cs" />
     <Compile Include="CommandHandler\HelpCommand.cs" />
     <Compile Include="Blocks\Tnt.cs" />
