Fix all projectiles (arrow, snowball, eggs) so they work with proper communication. Great stuff. Fixed bow so that draw works with force properly (even greater stuff). Added ability to disable plugins individually in server.config. Adding beginning of simple game-engine for plugins to make mini-games easier.

--- a/src/MiNET/MiNET.ServiceKiller/MiNET.ServiceKiller.csproj
+++ b/src/MiNET/MiNET.ServiceKiller/MiNET.ServiceKiller.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MiNET.ServiceKiller.Emulator</StartupObject>
+    <StartupObject>MiNET.ServiceKiller.MiNET.MiNetRealClient</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
