--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -54,10 +54,13 @@
     <Compile Include="CoreCommands.cs" />
     <Compile Include="MobHunt\CustomStandingSign.cs" />
     <Compile Include="MobHunt\CustomWallSign.cs" />
-    <Compile Include="MobHunt\MobHunt.cs" />
+    <Compile Include="MobHunt\MobHuntPlugin.cs" />
     <Compile Include="MobHunt\MobHuntLevel.cs" />
     <Compile Include="MobHunt\MobHuntLevelFactory.cs" />
     <Compile Include="MobHunt\PluginBlockFactory.cs" />
+    <Compile Include="Teams\CustomStandingSign.cs" />
+    <Compile Include="Teams\PluginBlockFactory.cs" />
+    <Compile Include="Teams\TeamPlugin.cs" />
     <Compile Include="TestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
