Anvil world saving(!!) Fixed health and damage so it works correctly with the different tiers. Note that health is not same as hearts, and is kept at a higher resolution to adjust to partial damages (full health is 200). Also some refactoring. Also added world edit plugin, to have something to test world save with.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -254,7 +254,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ConfigParser.cs" />
+    <Compile Include="Utils\Config.cs" />
     <Compile Include="Items\ItemBucket.cs" />
   </ItemGroup>
   <ItemGroup>
