--- a/src/MiNET/packages/repositories.config
+++ b/src/MiNET/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../MiNET.Service/packages.config" />
+  <repository path="..\MiNET.Client\packages.config" />
   <repository path="..\MiNET.Service\packages.config" />
   <repository path="..\MiNET.ServiceKiller\packages.config" />
   <repository path="..\MiNET.Test\packages.config" />
