--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Deedle" version="1.0.7" targetFramework="net45" />
+  <package id="fNbt" version="0.6.3" targetFramework="net45" />
   <package id="LibNoise" version="0.2" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
