--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -53,13 +53,19 @@
     <Compile Include="ConfigSamplePlugin.cs" />
     <Compile Include="CoreCommands.cs" />
     <Compile Include="MobHunt\CustomStandingSign.cs" />
-    <Compile Include="MobHunt\CustomWallSign.cs" />
     <Compile Include="MobHunt\MobHuntPlugin.cs" />
     <Compile Include="MobHunt\MobHuntLevel.cs" />
     <Compile Include="MobHunt\MobHuntLevelFactory.cs" />
     <Compile Include="MobHunt\PluginBlockFactory.cs" />
     <Compile Include="Teams\CustomStandingSign.cs" />
+    <Compile Include="Teams\CustomWallSign.cs" />
+    <Compile Include="Teams\Game.cs" />
+    <Compile Include="Teams\GameSettings.cs" />
+    <Compile Include="Teams\GameManager.cs" />
+    <Compile Include="Teams\GameMode.cs" />
+    <Compile Include="Teams\GameState.cs" />
     <Compile Include="Teams\PluginBlockFactory.cs" />
+    <Compile Include="Teams\SpawnCoordinates.cs" />
     <Compile Include="Teams\TeamPlugin.cs" />
     <Compile Include="TestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
