--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Blocks\Dirt.cs" />
     <Compile Include="Blocks\DoubleStoneSlab.cs" />
     <Compile Include="Blocks\DoubleWoodSlab.cs" />
+    <Compile Include="Blocks\FarmLand.cs" />
     <Compile Include="Blocks\Fence.cs" />
     <Compile Include="Blocks\Fencegate.cs" />
     <Compile Include="Blocks\Fire.cs" />
@@ -140,20 +141,25 @@
     <Compile Include="Items\ItemDiamondBoots.cs" />
     <Compile Include="Items\ItemDiamondChestplate.cs" />
     <Compile Include="Items\ItemDiamondHelmet.cs" />
+    <Compile Include="Items\ItemDiamondHoe.cs" />
     <Compile Include="Items\ItemDiamondLeggings.cs" />
     <Compile Include="Items\ItemDiamondSword.cs" />
     <Compile Include="Items\ItemEgg.cs" />
     <Compile Include="Items\ItemFurnace.cs" />
+    <Compile Include="Items\ItemGoldHoe.cs" />
     <Compile Include="Items\ItemIronBoots.cs" />
     <Compile Include="Items\ItemIronChestplate.cs" />
     <Compile Include="Items\ItemIronHelmet.cs" />
+    <Compile Include="Items\ItemIronHoe.cs" />
     <Compile Include="Items\ItemIronLeggings.cs" />
     <Compile Include="Items\ItemIronSword.cs" />
     <Compile Include="Items\ItemSign.cs" />
     <Compile Include="Items\ItemSlab.cs" />
     <Compile Include="Items\ItemSnowball.cs" />
     <Compile Include="Items\ItemStick.cs" />
+    <Compile Include="Items\ItemStoneHoe.cs" />
     <Compile Include="Items\ItemWoodenAxe.cs" />
+    <Compile Include="Items\ItemWoodenHoe.cs" />
     <Compile Include="Items\ItemWoodenPickaxe.cs" />
     <Compile Include="Items\ItemWoodenShovel.cs" />
     <Compile Include="Items\ItemWoodenSword.cs" />
