--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -131,7 +131,7 @@
     <Compile Include="Entities\Mob.cs" />
     <Compile Include="Entities\PrimedTnt.cs" />
     <Compile Include="Entities\Snowball.cs" />
-    <Compile Include="Entities\Throwable.cs" />
+    <Compile Include="Entities\Projectile.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="InventoryManager.cs" />
     <Compile Include="Items\ItemBed.cs" />
@@ -157,6 +157,7 @@
     <Compile Include="Items\ItemSign.cs" />
     <Compile Include="Items\ItemSlab.cs" />
     <Compile Include="Items\ItemSnowball.cs" />
+    <Compile Include="Items\ItemSpawnEgg.cs" />
     <Compile Include="Items\ItemStick.cs" />
     <Compile Include="Items\ItemStoneHoe.cs" />
     <Compile Include="Items\ItemWoodenAxe.cs" />
