--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Blocks\StoneBrickStairs.cs" />
     <Compile Include="Blocks\StoneSlab.cs" />
     <Compile Include="Blocks\TallGrass.cs" />
+    <Compile Include="Blocks\GrassPath.cs" />
     <Compile Include="Blocks\WallSign.cs" />
     <Compile Include="Blocks\StationaryWater.cs" />
     <Compile Include="Blocks\Wood.cs" />
@@ -146,12 +147,14 @@
     <Compile Include="Items\ItemEgg.cs" />
     <Compile Include="Items\ItemFurnace.cs" />
     <Compile Include="Items\ItemGoldHoe.cs" />
+    <Compile Include="Items\ItemGoldShovel.cs" />
     <Compile Include="Items\ItemHoe.cs" />
     <Compile Include="Items\ItemIronBoots.cs" />
     <Compile Include="Items\ItemIronChestplate.cs" />
     <Compile Include="Items\ItemIronHelmet.cs" />
     <Compile Include="Items\ItemIronHoe.cs" />
     <Compile Include="Items\ItemIronLeggings.cs" />
+    <Compile Include="Items\ItemIronShovel.cs" />
     <Compile Include="Items\ItemIronSword.cs" />
     <Compile Include="Items\ItemSign.cs" />
     <Compile Include="Items\ItemShovel.cs" />
@@ -160,6 +163,7 @@
     <Compile Include="Items\ItemSpawnEgg.cs" />
     <Compile Include="Items\ItemStick.cs" />
     <Compile Include="Items\ItemStoneHoe.cs" />
+    <Compile Include="Items\ItemStoneShovel.cs" />
     <Compile Include="Items\ItemWoodenAxe.cs" />
     <Compile Include="Items\ItemWoodenHoe.cs" />
     <Compile Include="Items\ItemWoodenPickaxe.cs" />
