--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -40,6 +40,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -57,6 +61,10 @@
     <Compile Include="MobHunt\MobHuntLevel.cs" />
     <Compile Include="MobHunt\MobHuntLevelFactory.cs" />
     <Compile Include="MobHunt\PluginBlockFactory.cs" />
+    <Compile Include="Nwo\NewWorldOrderPlugin.cs" />
+    <Compile Include="Nwo\NwoMobSelector.cs" />
+    <Compile Include="Nwo\NwoPasswordHasher.cs" />
+    <Compile Include="Nwo\NwoUserStore.cs" />
     <Compile Include="Teams\CustomStandingSign.cs" />
     <Compile Include="Teams\CustomWallSign.cs" />
     <Compile Include="Teams\Game.cs" />
