--- a/src/MiNET/TestPlugin/packages.config
+++ b/src/MiNET/TestPlugin/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
 </packages>
