--- a/src/MiNET/MiNET.Test/packages.config
+++ b/src/MiNET/MiNET.Test/packages.config
@@ -3,5 +3,6 @@
   <package id="Deedle" version="1.0.7" targetFramework="net45" />
   <package id="fNbt" version="0.6.3" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
