--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Items\ItemRawPorkchop.cs" />
     <Compile Include="LevelFactory.cs" />
     <Compile Include="MessageType.cs" />
+    <Compile Include="MotdProvider.cs" />
     <Compile Include="Net\InternalPing.cs" />
     <Compile Include="Net\McpeText.cs" />
     <Compile Include="Net\Skin.cs" />
