Throttling of the server implemented. Works absolutely great!

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -55,7 +55,7 @@
 				<conversionPattern value="%level %thread %logger - %message%newline" />
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="DEBUG" />
+				<levelMin value="INFO" />
 				<levelMax value="FATAL" />
 			</filter>
 		</appender>
