--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -61,6 +61,10 @@
     <Compile Include="MobHunt\MobHuntLevel.cs" />
     <Compile Include="MobHunt\MobHuntLevelFactory.cs" />
     <Compile Include="MobHunt\PluginBlockFactory.cs" />
+    <Compile Include="Pets\Pet.cs" />
+    <Compile Include="Pets\PetHealthManager.cs" />
+    <Compile Include="Pets\PetsPlugin.cs" />
+    <Compile Include="Pets\PetTypes.cs" />
     <Compile Include="Teams\CustomStandingSign.cs" />
     <Compile Include="Teams\CustomWallSign.cs" />
     <Compile Include="Teams\Game.cs" />
