--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -52,7 +52,7 @@
 			<maxSizeRollBackups value="2" />
 
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%level %thread %logger - %message%newline" />
+				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
 				<levelMin value="INFO" />
@@ -62,7 +62,7 @@
 
 		<root>
 			<appender-ref ref="Console" />
-			<!--<appender-ref ref="RollingFile" />-->
+			<appender-ref ref="RollingFile" />
 			<appender-ref ref="DebuggerAppender" />
 		</root>
 	</log4net>
