Proper disconnect also clean out the sessions.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -61,9 +61,9 @@
 		</appender>
 
 		<root>
-			<appender-ref ref="Console" />
+			<!--<appender-ref ref="Console" />-->
 			<appender-ref ref="RollingFile" />
-			<appender-ref ref="DebuggerAppender" />
+			<!--<appender-ref ref="DebuggerAppender" />-->
 		</root>
 	</log4net>
 
