FIX performance problem. A typical windows empty loop causing 100% CPU. I should have known. Idiot! A completely new emulator, now with the real client.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -61,7 +61,7 @@
 		</appender>
 
 		<root>
-			<!--<appender-ref ref="Console" />-->
+			<appender-ref ref="Console" />
 			<appender-ref ref="RollingFile" />
 			<!--<appender-ref ref="DebuggerAppender" />-->
 		</root>
