Fix multilevel teleport. Now working again. Performance enchancements to broadcast because of particles.

--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -61,19 +61,21 @@
     <Compile Include="MobHunt\MobHuntLevel.cs" />
     <Compile Include="MobHunt\MobHuntLevelFactory.cs" />
     <Compile Include="MobHunt\PluginBlockFactory.cs" />
+    <Compile Include="NiceLobby\NiceLobbyPlugin.cs" />
     <Compile Include="Pets\Pet.cs" />
     <Compile Include="Pets\PetHealthManager.cs" />
     <Compile Include="Pets\PetsPlugin.cs" />
     <Compile Include="Pets\PetTypes.cs" />
-    <Compile Include="Teams\CustomStandingSign.cs" />
-    <Compile Include="Teams\CustomWallSign.cs" />
+    <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Teams\Blocks\CustomStandingSign.cs" />
+    <Compile Include="Teams\Blocks\CustomWallSign.cs" />
+    <Compile Include="Teams\Blocks\PluginBlockFactory.cs" />
     <Compile Include="Teams\Game.cs" />
-    <Compile Include="Teams\GameSettings.cs" />
     <Compile Include="Teams\GameManager.cs" />
-    <Compile Include="Teams\GameMode.cs" />
     <Compile Include="Teams\GameState.cs" />
-    <Compile Include="Teams\PluginBlockFactory.cs" />
-    <Compile Include="Teams\SpawnCoordinates.cs" />
+    <Compile Include="Teams\Model\GameMode.cs" />
+    <Compile Include="Teams\Model\GameSettings.cs" />
+    <Compile Include="Teams\Model\SpawnCoordinates.cs" />
     <Compile Include="Teams\TeamPlugin.cs" />
     <Compile Include="TestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
