ADD: Torch. In doing so, refactored a bit around block placement checks so it can now be based on the face too (for torch and other things).
REFACT: Entity spawn because of using entity ID 0 tricks again. Projectiles need to know who their shooter is in order for clients to work with collision detection (or avoid it).

FIX: Collision detection for arrows improved, but still a hack.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Blocks\StoneSlab.cs" />
     <Compile Include="Blocks\TallGrass.cs" />
     <Compile Include="Blocks\GrassPath.cs" />
+    <Compile Include="Blocks\Torch.cs" />
     <Compile Include="Blocks\WallSign.cs" />
     <Compile Include="Blocks\StationaryWater.cs" />
     <Compile Include="Blocks\Wood.cs" />
