--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -173,7 +173,7 @@
     <Compile Include="Items\ItemRawBeef.cs" />
     <Compile Include="Items\ItemRawChicken.cs" />
     <Compile Include="Items\ItemRawPorkchop.cs" />
-    <Compile Include="LevelFactory.cs" />
+    <Compile Include="LevelManager.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="MotdProvider.cs" />
     <Compile Include="Net\InternalPing.cs" />
