--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -183,6 +183,7 @@
     <Compile Include="MotdProvider.cs" />
     <Compile Include="Net\InternalPing.cs" />
     <Compile Include="Net\McpeText.cs" />
+    <Compile Include="Net\UUID.cs" />
     <Compile Include="Net\WiredAttribute.cs" />
     <Compile Include="Net\Skin.cs" />
     <Compile Include="Particles\BubbleParticle.cs" />
