--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -306,9 +306,9 @@
     <Compile Include="Worlds\LevelInfo.cs" />
     <Compile Include="Worlds\Structures\OakTree.cs" />
     <Compile Include="Worlds\Structures\StructureClass.cs" />
-    <Content Include="Net\MCPE Protocol.xml">
+    <None Include="Net\MCPE Protocol.xml">
       <SubType>Designer</SubType>
-    </Content>
+    </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Config.cs" />
     <Compile Include="Items\ItemBucket.cs" />
